--- a/brain_tumor_detection.ipynb
+++ b/brain_tumor_detection.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyPSEA3t1E8z8xRGsaubsZcG",
+      "authorship_tag": "ABX9TyNdzcqdra4iGDWbIO1jzqFC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -36,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e-FWfAC62uWF",
-        "outputId": "d56028b1-f8a7-4100-d108-d9de74d6c814"
+        "outputId": "4136d86e-4673-4b42-ec9b-b1944402f603"
       },
       "outputs": [
         {
@@ -63,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eN2QvDJE5eN3",
-        "outputId": "474a548d-f5b1-4b83-d688-ff6193f5067a"
+        "outputId": "73e1dea3-6608-4144-f4b5-2478eb38f8dc"
       },
       "execution_count": 2,
       "outputs": [
@@ -79,13 +77,17 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
         "import os\n",
+        "import warnings\n",
+        "import seaborn as sns\n",
         "from PIL import Image\n",
         "from torchvision import transforms,models\n",
         "from torch.utils.data import DataLoader\n",
         "import torch\n",
         "import cv2\n",
-        "import tqdm\n",
+        "from tqdm import tqdm\n",
         "import glob\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
@@ -94,7 +96,18 @@
       "metadata": {
         "id": "7rV6zCvp393t"
       },
-      "execution_count": 30,
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+      ],
+      "metadata": {
+        "id": "5VkpAg0XCkcF"
+      },
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -106,7 +119,30 @@
       "metadata": {
         "id": "RRweK6rT5mII"
       },
-      "execution_count": 4,
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_names=[\"glioma\",\"meningioma\",\"notumor\",\"pituitary\"]\n",
+        "train_sizes=[\n",
+        "    len(os.listdir(\"/content/drive/MyDrive/brain tumor/Training/glioma\")),\n",
+        "    len(os.listdir(\"/content/drive/MyDrive/brain tumor/Training/meningioma\")),\n",
+        "    len(os.listdir(\"/content/drive/MyDrive/brain tumor/Training/notumor\")),\n",
+        "    len(os.listdir(\"/content/drive/MyDrive/brain tumor/Training/pituitary\"))\n",
+        "]\n",
+        "test_sizes=[\n",
+        "    len(os.listdir(\"/content/drive/MyDrive/brain tumor/Testing/glioma\")),\n",
+        "    len(os.listdir(\"/content/drive/MyDrive/brain tumor/Testing/meningioma\")),\n",
+        "    len(os.listdir(\"/content/drive/MyDrive/brain tumor/Testing/notumor\")),\n",
+        "    len(os.listdir(\"/content/drive/MyDrive/brain tumor/Testing/pituitary\"))\n",
+        "]\n"
+      ],
+      "metadata": {
+        "id": "j1Uaoarc_7L9"
+      },
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -122,7 +158,7 @@
       "metadata": {
         "id": "l0AONrG85x7m"
       },
-      "execution_count": 5,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -135,7 +171,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGbZqF7F6glh",
-        "outputId": "6f453167-d8a5-43e6-8dcb-2b553d3eed0f"
+        "outputId": "c4044e63-8a07-4fd7-ad1f-684ffa83647e"
       },
       "execution_count": 6,
       "outputs": [
@@ -185,9 +221,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b0OYgpnb75iU",
-        "outputId": "1a4ebc50-9f73-4968-ed99-7a9477774e7d"
+        "outputId": "bba2d353-3b50-479d-8e08-aab8842a3b48"
       },
-      "execution_count": 33,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,6 +238,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# READING IMAGES\n"
+      ],
+      "metadata": {
+        "id": "_5-Ih3YtFkPY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tumor=[]\n",
+        "healthy=[]\n",
+        "for f in glob.iglob(\"\"):\n",
+        "  img=cv2.imread(f)\n",
+        "  img=cv2.resize(img,(224,224))\n",
+        "  b,g,r=cv2.split(img)\n",
+        "  img=cv2.merge([r,g,b])\n",
+        "  tumor.append(img)\n",
+        "for f in glob.iglob(\"\"):\n",
+        "  img=cv2.imread(f)\n",
+        "  img=cv2.resize(img,(224,224))\n",
+        "  b,g,r=cv2.split(img)\n",
+        "  img=cv2.merge([r,g,b])\n",
+        "  healthy.append(img)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "PArX9YsXDAdI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "health=np.array(healthy)\n",
+        "not_healthy=np.array(tumor)\n",
+        "both=np.concatenate((health,not_healthy),axis=0)"
+      ],
+      "metadata": {
+        "id": "vWlgx0ZTGATy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "len(train_paths)"
@@ -211,9 +294,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2-7sDB336iej",
-        "outputId": "5805c435-9053-423e-f50a-0f8f132012f5"
+        "outputId": "12303329-9c57-41d0-bca3-5e293b9b1cc2"
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +306,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 12
         }
       ]
     },
@@ -237,9 +320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kUyapgf66riA",
-        "outputId": "1de0c071-603a-4f9c-e264-a72d680e8b04"
+        "outputId": "50ef6e06-60c6-401a-9579-e8e7a632a858"
       },
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +332,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 13
         }
       ]
     },
@@ -263,20 +346,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "96e1722b-e99a-4dd1-8aaf-fddc35b1b60f"
+        "outputId": "49de1dd4-77e1-4dcd-e350-14a25f48892d"
       },
-      "execution_count": 9,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
             "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
             "  warnings.warn(msg)\n",
             "Downloading: \"https://download.pytorch.org/models/resnet50-0676ba61.pth\" to /root/.cache/torch/hub/checkpoints/resnet50-0676ba61.pth\n",
-            "100%|██████████| 97.8M/97.8M [00:00<00:00, 187MB/s]\n"
+            "100%|██████████| 97.8M/97.8M [00:00<00:00, 180MB/s]\n"
           ]
         }
       ]
@@ -291,9 +374,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3H-bI2PUATpj",
-        "outputId": "0e039766-035d-4521-9d9e-65a85c9b1c60"
+        "outputId": "8934bda0-1ea9-4778-fb4e-322a13a5e756"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,7 +561,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 15
         }
       ]
     },
@@ -494,9 +577,9 @@
           "height": 36
         },
         "id": "ktQc_efQAYQB",
-        "outputId": "653fe20a-d125-43f3-e9ea-0dddd1b7776d"
+        "outputId": "1673278b-0f91-43ca-a5c6-774011702d51"
       },
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +592,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 16
         }
       ]
     },
@@ -522,7 +605,7 @@
       "metadata": {
         "id": "n_jIEbudAjrb"
       },
-      "execution_count": 12,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -537,7 +620,24 @@
       "metadata": {
         "id": "-M0R1BspBQF5"
       },
-      "execution_count": 13,
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Brain_tumor(nn.Module):\n",
+        "  def __init__(self) :\n",
+        "     super().__init__()\n",
+        "     self.transform=transform\n",
+        "     self.classes=['glioma', 'meningioma', 'notumor', 'pituitary']\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "W9FoW-F3Dv_6"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
